--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-/* font-family: 'Oswald', sans-serif; */
 body{
     display: flex;
-    height: 100vw;
+    font-family: 'Oswald', sans-serif;
 }
-.imageLogo{
-flex: 1;
+.image{
+    width: 30vw;
 }
 .rightSide{
     display: flex;
-    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
 }
