--- a/style.css
+++ b/style.css
@@ -1,12 +1,67 @@
 body{
     display: flex;
     font-family: 'Oswald', sans-serif;
+    margin: 0;
 }
-.image{
-    width: 30vw;
+.leftSide{
+    background: url(marek-piwnicki-HghkWDMuHx4-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    width:30vw;
+    height: 100vh;
+}
+img{
+    width:30%;
+    height:30%;
+}
+.logo{
+    background-color: rgba(29, 21, 21, 0.164);
+    position: relative;
+    top: 20%;
+    color: white;
+    font-size: 4rem;
 }
 .rightSide{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: rgb(255, 255, 255);
+    line-height: 2;
+    flex: 1 1 100%;
 }
+.middle{
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0px 4px 5px rgba(182, 181, 181, 0.267);
+}
+.top, .middle, .bottom{    
+    padding: 2% 10% 2% 5%;
+    line-height: 2;
+}
+/* .leftSide{
+    background: url(marek-piwnicki-HghkWDMuHx4-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    width: 30%;
+}
+.logo{background: #0e0d0d57;}
+.top, .middle, .bottom{
+    line-height: 2;
+    padding-left: 5%;
+    padding-right: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+.rightSide{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgb(233, 233, 233);
+}
+.middle{
+    background-color: lightgray;
+    box-shadow: 0px 4px 5px rgb(182, 181, 181);
+}
+.bottom{
+    display: flex;
+    flex-direction: column;
+} */
