--- a/style.css
+++ b/style.css
@@ -1,41 +1,118 @@
+@font-face {
+    font-family: 'Norse';
+    src: url('./Norse-Bold.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body{
     display: flex;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  padding: 0;
+}
+
 .leftSide{
     background: url(marek-piwnicki-HghkWDMuHx4-unsplash.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size:cover;
-    width:30vw;
+    width: 30vw;
     height: 100vh;
 }
 img{
-    width:30%;
-    height:30%;
+    width:20%;
+    height:40%;
+    padding: 1rem;
 }
 .logo{
-    background-color: rgba(29, 21, 21, 0.164);
+    font-family: norse;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(29, 21, 21, 0.075);
     position: relative;
-    top: 20%;
+    top: 15%;
     color: white;
-    font-size: 4rem;
+    font-size: clamp(2rem,7vw,10rem);
+    /* 2-10 */
 }
 .rightSide{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background-color: rgb(255, 255, 255);
-    line-height: 2;
-    flex: 1 1 100%;
-}
-.middle{
-    background-color: rgb(245, 245, 245);
-    box-shadow: 0px 4px 5px rgba(182, 181, 181, 0.267);
+    justify-content: center;
+    background-color: #F9FAFB;
+    width:70vw;
+    
 }
 .top, .middle, .bottom{    
     padding: 2% 10% 2% 5%;
     line-height: 2;
+}
+.top{
+    width:60%;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.top > p {
+    line-height: 1.2;
+}
+.middle{
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 5px rgba(182, 181, 181, 0.267);
+}
+h2{
+    margin: 5px;
+    margin-top: -10px;
+}
+.forms{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 60%;
+}
+.forms > label {
+    width: 40%;
+    display: inline-block;
+    font-size: .7rem;
+    margin-top: 26px;
+}
+
+input{
+    box-sizing: border-box;
+    border-radius: 5px;
+    border:1px solid #d9dcdf;
+    height: 1.6rem;
+    width: 40%;
+    padding-left: 10px;
+}
+input:hover{
+    outline:1.8px solid #d3cdc3;
+}
+input:focus{
+    outline: 2px solid #ffd979;
+    box-shadow: 3px 4px 5px rgba(182, 181, 181, 0.267);
+}
+button{
+    background-color: #FCD779;
+    border-radius: 5px;
+    border: none;
+    padding: 1rem 2rem;
+    box-shadow: 0px 4px 5px rgba(133, 131, 131, 0.521);
+    margin:20px 0px;
+    width:15vw;
+
+}
+a{
+    text-decoration: none;
+    color: #C6873C;
 }
 /* .leftSide{
     background: url(marek-piwnicki-HghkWDMuHx4-unsplash.jpg);
